# fastio_cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json  run.js
scripts/: bump-version.sh
src/: client.rs  config.rs  deprecation.rs  error.rs  lib.rs  opaque_id.rs
src/api/: ai.rs  ai_memory.rs  apps.rs  asset.rs  auth.rs  comment.rs  dashboard.rs  download.rs  event.rs  fileshare.rs  howto.rs  import.rs  instructions.rs  invitation.rs  locking.rs  member.rs  metadata.rs  mod.rs  orchestration.rs  org.rs  preview.rs  search.rs  share.rs  signing.rs  storage.rs  system.rs  types.rs  upload.rs  user.rs  workflow.rs  workspace.rs
src/auth/: credentials.rs  mod.rs  pkce.rs  token.rs
src/output/: csv_output.rs  format.rs  json.rs  markdown.rs  mod.rs  table.rs  view.rs
